--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
-
     <servlet>
-        <servlet-name>ex9</servlet-name>
-        <servlet-class>ex9</servlet-class>
+        <servlet-name>ex8a</servlet-name>
+        <servlet-class>ex8a</servlet-class>
     </servlet>
-
     <servlet-mapping>
-        <servlet-name>ex9</servlet-name>
-        <url-pattern>/ex9</url-pattern>
+        <servlet-name>ex8a</servlet-name>
+        <url-pattern>/ex8a</url-pattern>
     </servlet-mapping>
-
 </web-app>
